Fixing annoying non mobile first styles

--- a/src/event.css
+++ b/src/event.css
@@ -118,9 +118,10 @@ cite {
 	padding: 0 0 30px 0;
 }
 
+
 .fm-episode-text {
-	margin: 0 auto;
-	padding: 150px 0 75px;
+	margin: 0 16px;
+	padding: 75px 0 50px;
 	width: 55%;
 	max-width: 600px;
     text-align: center;
@@ -137,16 +138,55 @@ cite {
     font-size: 17px;
 }
 .fm-episode-quote {
-	margin: 75px auto;
-	padding: 0 5%;
+	margin: 50px 16px;
+	width: 55%;
 	font-family: "DrMartensHandwritingRounder", serif;
 	font-weight: normal;
-	font-size: 40px;
+	font-size: 48px;
 	text-align: center;
-	line-height: 48px;
+	line-height: 1.25;
 	max-width: 800px;
 }
+.fm-spacer {
+	height: 50px;
+	width: 100%;
+}
+.fm-episode-big-image {
+	margin-bottom: 50px;
+	display: block;
+}
+@media screen and (min-width: 480px) {
+	.fm-episode-text {
+		margin: 0 32px;
+		padding: 100px 0 50px;
+	}
+	.fm-episode-quote {
+		margin: 75px 32px;
+	}
+	.fm-episode-big-image {
+		margin-bottom: 75px;
+	}
+}
+@media screen and (min-width: 768px) { 
+	.fm-spacer {
+		height: 75px;
+		width: 100%;
+	}
+	.fm-episode-text {
+		margin: 0 auto;
+		padding: 150px 0 75px;
+	}
+	.fm-episode-quote {
+		margin: 75px auto;
+	}
+}
 
+@media screen and (min-width: 1024px) { 
+	.fm-episode-big-image {
+		display: inline-block; /* disables collapsing margin */
+		margin-top: 75px;
+	}
+}
 img.fm-episode-big-image {
 	width: 100%;
 
@@ -192,7 +232,6 @@ a.fm-episode-back {
 		font-size: 18px;
 		letter-spacing: 0.05em; 
 	}
-
 @media screen and (min-width: 1441px) { 
 	.fm-episode-details {
 		width: 1210px;
@@ -201,6 +240,8 @@ a.fm-episode-back {
 }
 
 @media screen and (max-width: 1440px) { 
+	
+
 	.fm-episode-details-container {
 		padding: 30px 114px 100px;
 	} 
@@ -221,7 +262,8 @@ a.fm-episode-back {
 		padding: 30px 40px 100px;
 	} 
 }
-
+@media screen and (min-width: 1024px) { 
+}
 @media screen and (max-width: 1024px) { 
 	.fm-episode-details p {
 		width: 55%;
@@ -229,7 +271,10 @@ a.fm-episode-back {
 }
 
 @media screen and (max-width: 768px) {
-
+	.fm-episode-text,.fm-episode-quote {
+		max-width: none;
+		width: initial;
+	}
 	.fm-episode-header-video {
 		overflow: hidden;
 	}
@@ -252,16 +297,10 @@ a.fm-episode-back {
 		width: 100%;
 	}
 
-	.fm-episode-text {
-			
-		margin: 0 32px;
-		padding: 150px 0 75px;
-		max-width: none;
-		width: initial;
-	}
 
 	.fm-episode-quote {
 		font-size: 36px;
+		line-height: 1.22;
 	} 
 }
 
@@ -282,10 +321,6 @@ a.fm-episode-back {
 		font-size: 36px;
 	}
 
-	.fm-episode-text {
-		margin: 0 16px;
-		padding: 125px 0 75px;
-	}
 }
 
 
